Preventing white space bounce

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,14 @@
     background: #D9D9D9;
     border-radius: 9px;
 }
+
+/* To prevent white space bouncing, i.e when white space shows up during overscroll*/
+html{
+    overflow: hidden;
+    height: 100%;
+}
+
+body{
+    overflow: auto;
+    height: 100%;
+}
